--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -113,7 +113,7 @@ jobs:
     name: Notify Discord
     runs-on: ubuntu-latest
     needs: [ci, deploy]
-    if: always()
+    if: github.event_name == 'push' && always()
 
     steps:
       - name: Send notification
