refactor: test only main

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -112,6 +112,7 @@ jobs:
   k6_test:
     needs: deploy
     runs-on: ubuntu-latest
+    if: github.ref_name == 'main'
     steps:
       - uses: actions/checkout@v4
       - uses: grafana/setup-k6-action@v1
@@ -136,7 +137,7 @@ jobs:
   notify:
     name: Notify Discord
     runs-on: ubuntu-latest
-    needs: [ci, deploy, k6_test]
+    needs: [ci, deploy]
     if: always()
 
     steps:
@@ -144,10 +145,11 @@ jobs:
         run: |
           CI_RESULT="${{ needs.ci.result }}"
           DEPLOY_RESULT="${{ needs.deploy.result }}"
+          K6_RESULT="${{ needs.k6_test.result }}"
           REF="${{ github.repository }}@${{ github.ref_name }}"
           RUN_URL="${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
 
           curl -H "Content-Type: application/json" \
                -X POST \
-               -d "{\"username\":\"Frontend CI/CD\",\"content\":\"🖥️ Frontend CI/CD 결과\\n- CI: **${CI_RESULT}**\\n- Deploy: **${DEPLOY_RESULT}**\\n🔗 [${REF}](${RUN_URL})\"}" \
+               -d "{\"username\":\"Frontend CI/CD\",\"content\":\"🖥️ Frontend CI/CD 결과\\n- CI: **${CI_RESULT}**\\n- Deploy: **${DEPLOY_RESULT}**\\n- K6: **${K6_RESULT}**\\n🔗 [${REF}](${RUN_URL})\"}" \
                ${{ secrets.DISCORD_WEBHOOK_URL }}
