--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -137,7 +137,7 @@ jobs:
   notify:
     name: Notify Discord
     runs-on: ubuntu-latest
-    needs: [ci, deploy]
+    needs: [ci, deploy, k6_test]
     if: always()
 
     steps:
