feat: main merge 시 CD 이 후 k6 테스트 추가

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -109,10 +109,34 @@ jobs:
             chmod +x deploy.sh
             ./deploy.sh "${{ env.REMOTE_DIR }}/incoming/${{ env.ARTIFACT_FILE }}"
 
+  k6_test:
+    needs: deploy
+    runs-on: ubuntu-latest
+    if: github.ref_name == 'main'
+    steps:
+      - uses: actions/checkout@v4
+      - uses: grafana/setup-k6-action@v1
+
+      - name: k6-home-test
+        uses: grafana/run-k6-action@v1
+        env:
+          URL: ${{ secrets.HOME_URL}}
+          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+        with:
+          path: tests/page_loading.js
+
+      - name: k6-group-detail-test
+        uses: grafana/run-k6-action@v1
+        env:
+          URL: ${{ secrets.GROUP_DETAIL_URL }}
+          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+        with:
+          path: tests/page_loading.js
+
   notify:
     name: Notify Discord
     runs-on: ubuntu-latest
-    needs: [ci, deploy]
+    needs: [ci, deploy, k6_test]
     if: github.event_name == 'push' && always()
 
     steps:
@@ -120,10 +144,11 @@ jobs:
         run: |
           CI_RESULT="${{ needs.ci.result }}"
           DEPLOY_RESULT="${{ needs.deploy.result }}"
+          K6_RESULT="${{ needs.k6_test.result }}"
           REF="${{ github.repository }}@${{ github.ref_name }}"
           RUN_URL="${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
 
           curl -H "Content-Type: application/json" \
                -X POST \
-               -d "{\"username\":\"Frontend CI/CD\",\"content\":\"🖥️ Frontend CI/CD 결과\\n- CI: **${CI_RESULT}**\\n- Deploy: **${DEPLOY_RESULT}**\\n🔗 [${REF}](${RUN_URL})\"}" \
+               -d "{\"username\":\"Frontend CI/CD\",\"content\":\"🖥️ Frontend CI/CD 결과\\n- CI: **${CI_RESULT}**\\n- Deploy: **${DEPLOY_RESULT}**\\n- K6: **${K6_RESULT}**\\n🔗 [${REF}](${RUN_URL})\"}" \
                ${{ secrets.DISCORD_WEBHOOK_URL }}
