✨ fix: docker 기반 CI/CD

--- a/.github/workflows/ci-cd-docker.yml
+++ b/.github/workflows/ci-cd-docker.yml
@@ -104,7 +104,7 @@ jobs:
       - name: Deploy via SSH (pull/run)
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.FRONT_PROD_SERVER_HOST }}
+          host: ${{ secrets.FRONT_DEV_SERVER_HOST }}
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script_stop: true
