♻️ refactor: provenance false 추가

--- a/.github/workflows/ci-cd-docker.yml
+++ b/.github/workflows/ci-cd-docker.yml
@@ -90,6 +90,8 @@ jobs:
           tags: |
             ${{ env.IMAGE }}
             ${{ env.LATEST_IMAGE }}
+          provenance: false
+          sbom: false
           cache-from: type=gha
           cache-to: type=gha,mode=max
           build-args: |
