--- a/.github/workflows/ci-cd-docker.yml
+++ b/.github/workflows/ci-cd-docker.yml
@@ -61,7 +61,7 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Resolve image tag/repo
+      - name: Resolve environment
         env:
           ECR_REPO_DEV: 080598576517.dkr.ecr.ap-northeast-2.amazonaws.com/dev/fe
           ECR_REPO_PROD: 080598576517.dkr.ecr.ap-northeast-2.amazonaws.com/prod/fe
@@ -92,9 +92,9 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
           build-args: |
-            NEXT_PUBLIC_API_URL=${{ secrets.NEXT_PUBLIC_API_URL }}
+            NEXT_PUBLIC_API_URL=${{ github.ref_name == 'main' && secrets.NEXT_PUBLIC_API_URL_PROD || secrets.NEXT_PUBLIC_API_URL_DEV }}
             NEXT_PUBLIC_KAKAO_CLIENT_ID=${{ secrets.NEXT_PUBLIC_KAKAO_CLIENT_ID }}
-            NEXT_PUBLIC_KAKAO_REDIRECT_URI=${{ secrets.NEXT_PUBLIC_KAKAO_REDIRECT_URI }}
+            NEXT_PUBLIC_KAKAO_REDIRECT_URI=${{ github.ref_name == 'main' && secrets.NEXT_PUBLIC_KAKAO_REDIRECT_URI_PROD || secrets.NEXT_PUBLIC_KAKAO_REDIRECT_URI_DEV }}
             NEXT_PUBLIC_S3_CDN=${{ secrets.NEXT_PUBLIC_S3_CDN }}
             NEXT_PUBLIC_KAKAO_SDK_KEY=${{ secrets.NEXT_PUBLIC_KAKAO_SDK_KEY }}
             NEXT_PUBLIC_KAKAO_SDK_TEST_KEY=${{ secrets.NEXT_PUBLIC_KAKAO_MAP_KEY }}
@@ -107,6 +107,13 @@ jobs:
     if: github.event_name == 'push' && needs.build_push.result == 'success'
 
     steps:
+      - name: Setup WireGuard
+        run: |
+          sudo apt-get update && sudo apt-get install -y wireguard
+          echo "${{ secrets.WG_CONF }}" | sudo tee /etc/wireguard/wg0.conf
+          sudo chmod 600 /etc/wireguard/wg0.conf
+          sudo wg-quick up wg0
+
       - name: Deploy via SSH (pull/run)
         uses: appleboy/ssh-action@master
         with:
@@ -119,6 +126,10 @@ jobs:
             cd /home/ubuntu
             sudo docker compose pull
             sudo docker compose up -d
+
+      - name: Teardown WireGuard
+        if: always()
+        run: sudo wg-quick down wg0 || true
 
   k6_test:
     needs: deploy
