--- a/.github/workflows/ci-cd-docker.yml
+++ b/.github/workflows/ci-cd-docker.yml
@@ -110,7 +110,7 @@ jobs:
       - name: Setup WireGuard
         run: |
           sudo apt-get update && sudo apt-get install -y wireguard
-          echo "${{ secrets.WG_CONF }}" | sudo tee /etc/wireguard/wg0.conf
+          echo "${{ secrets.WG_CONF }}" | sed '/^DNS/d' | sudo tee /etc/wireguard/wg0.conf
           sudo chmod 600 /etc/wireguard/wg0.conf
           sudo wg-quick up wg0
 
