--- a/.github/workflows/ci-cd-docker.yml
+++ b/.github/workflows/ci-cd-docker.yml
@@ -157,6 +157,8 @@ jobs:
           S3_BUCKET="${{ secrets.CODEDEPLOY_BUCKET }}"
           S3_KEY="codedeploy/prod/fe/${GITHUB_SHA::7}.zip"
           aws s3 cp deployment.zip "s3://${S3_BUCKET}/${S3_KEY}"
+          echo "S3_BUCKET=${S3_BUCKET}" >> $GITHUB_ENV
+          echo "S3_KEY=${S3_KEY}" >> $GITHUB_ENV
 
       - name: Create CodeDeploy deployment (from S3)
         run: |
