--- a/.github/workflows/ci-cd-docker.yml
+++ b/.github/workflows/ci-cd-docker.yml
@@ -161,13 +161,45 @@ jobs:
 
       - name: Create CodeDeploy deployment (from S3)
         run: |
-          aws deploy create-deployment \
+          DEPLOYMENT_ID=$(aws deploy create-deployment \
             --application-name "${APPLICATION_NAME}" \
             --deployment-group-name "${DEPLOYMENT_GROUP}" \
             --deployment-config-name CodeDeployDefault.AllAtOnce \
             --s3-location bucket="${S3_BUCKET}",key="${S3_KEY}",bundleType=zip \
             --file-exists-behavior OVERWRITE \
-            --ignore-application-stop-failures
+            --ignore-application-stop-failures \
+            --query deploymentId \
+            --output text)
+          echo "DEPLOYMENT_ID=${DEPLOYMENT_ID}" >> "$GITHUB_ENV"
+          echo "Created deployment: ${DEPLOYMENT_ID}"
+
+      - name: Wait for deployment complete
+        run: |
+          DEPLOYMENT_ID=${{ env.DEPLOYMENT_ID }}
+          echo "Waiting for deployment ${DEPLOYMENT_ID} to complete..."
+          
+          while true; do
+            STATUS=$(aws deploy get-deployment \
+              --deployment-id "${DEPLOYMENT_ID}" \
+              --query 'deploymentInfo.status' \
+              --output text)
+            
+            echo "$(date '+%Y-%m-%d %H:%M:%S') - Status: ${STATUS}"
+            
+            case "${STATUS}" in
+              Succeeded)
+                echo "Deployment succeeded!"
+                exit 0
+                ;;
+              Failed|Stopped)
+                echo "Deployment ${STATUS}"
+                exit 1
+                ;;
+              *)
+                sleep 10
+                ;;
+            esac
+          done
 
   k6_test:
     needs: deploy
